src/objects/SubTask__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <label>Estimate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To Do</fullName>
                    <default>true</default>
                    <label>To Do</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskCard__c</fullName>
        <label>TaskCard</label>
        <referenceTo>TaskCard__c</referenceTo>
        <relationshipLabel>SubTask</relationshipLabel>
        <relationshipName>SubTask</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TotalTrack__c</fullName>
        <label>TotalTrack</label>
        <summarizedField>TrackTime__c.Time__c</summarizedField>
        <summaryForeignKey>TrackTime__c.SubTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>SubTask</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SubTask Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubTask</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>